--- a/SOSU-Power-9000.CareApp/MainPage.xaml
+++ b/SOSU-Power-9000.CareApp/MainPage.xaml
@@ -1,36 +1,64 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="SOSU_Power_9000.CareApp.MainPage">
+             x:Class="SOSU_Power_9000.CareApp.MainPage"
+             Shell.NavBarIsVisible="False"
+             Title="LoginPage">
+    <!-- Left,Top,Right,Bottom -->
 
-    <ScrollView>
+    <Grid
+        RowDefinitions="*,*,*">
+
         <VerticalStackLayout
-            Padding="30,0"
-            Spacing="25">
-            <Image
-                Source="dotnet_bot.png"
-                HeightRequest="185"
-                Aspect="AspectFit"
-                SemanticProperties.Description="dot net bot in a race car number eight" />
+            Grid.RowSpan="3"
+            BackgroundColor="{StaticResource BackgroundColor}"/>
 
-            <Label
-                Text="Hello, World!"
-                Style="{StaticResource Headline}"
-                SemanticProperties.HeadingLevel="Level1" />
+        <Frame
+            Grid.Row="1"
+            Margin="20,0,20,0"
+            Padding="30"
+            BackgroundColor="{StaticResource BoxColor}"
+            CornerRadius="15">
 
-            <Label
-                Text="Welcome to &#10;.NET Multi-platform App UI"
-                Style="{StaticResource SubHeadline}"
-                SemanticProperties.HeadingLevel="Level2"
-                SemanticProperties.Description="Welcome to dot net Multi platform App U I" />
+            <Grid
+                RowDefinitions="Auto,*,*">
 
-            <Button
-                x:Name="CounterBtn"
-                Text="Click me" 
-                SemanticProperties.Hint="Counts the number of times you click"
-                Clicked="OnCounterClicked"
-                HorizontalOptions="Fill" />
-        </VerticalStackLayout>
-    </ScrollView>
+                <Label
+                    Grid.Row="0"
+                    Text="Log ind"
+                    HorizontalOptions="Center"
+                    FontSize="20"
+                    FontAttributes="Bold"
+                    TextColor="{StaticResource BlackColor}"/>
+
+                <Frame
+                    Grid.Row="1"
+                    VerticalOptions="Center"
+                    Padding="0"
+                    Margin="0,20,0,20">
+                    <Entry
+                        x:Name="UserId"
+                        VerticalOptions="Center"
+                        Placeholder="Indtast bruger ID..."/>
+                </Frame>
+                
+
+                <Button
+                    Grid.Row="2"
+                    Text="Log ind" 
+                    CornerRadius="20"
+                    HeightRequest="50"
+                    WidthRequest="200"
+                    FontSize="20"
+                    FontAttributes="Bold"
+                    VerticalOptions="End"
+                    Clicked="LoginBtn_Clicked"
+                    TextColor="{StaticResource WhiteColor}"
+                    BackgroundColor="{StaticResource ButtonColor}"/>
+                
+            </Grid>
+
+        </Frame>
+    </Grid>
 
 </ContentPage>
