worked on userpage design

--- a/SOSU-Power-9000.CareApp/MainPage.xaml
+++ b/SOSU-Power-9000.CareApp/MainPage.xaml
@@ -39,7 +39,8 @@
                     <Entry
                         x:Name="UserId"
                         VerticalOptions="Center"
-                        Placeholder="Indtast bruger ID..."/>
+                        Placeholder="Indtast bruger ID..."
+                        Completed="UserId_Completed"/>
                 </Frame>
                 
 
