--- a/SOSU-Power-9000.CareApp/UserPage.xaml
+++ b/SOSU-Power-9000.CareApp/UserPage.xaml
@@ -8,33 +8,59 @@
 
     <Grid
         ColumnDefinitions="*,*"
-        RowDefinitions="Auto,*">
+        RowDefinitions="Auto,auto,*"
+        BackgroundColor="{StaticResource BackgroundColor}"
+        Padding="0,5,0,0">
 
-        <VerticalStackLayout
+        <!-- Main Content -->
+        <Grid
             Grid.ColumnSpan="2"
-            Grid.RowSpan="2"
-            BackgroundColor="{StaticResource BackgroundColor}"/>
+            Grid.Row="2"
+            BackgroundColor="{StaticResource BackgroundColor}"
+            Margin="10,0,10,0">
 
-        <Frame>
-
-            <Grid>
-                
-            </Grid>
+            <!-- 
+            In here I have to display the tasks for the particulair user.
+            Using a VerticalStackLayout and inside use a BindableLayout.ItemTemplate with DataTemplate inside.
+            Here I can have my frames with the tasks.
             
-        </Frame>
+            I just have to find out, how to get my tasks out of the database (localDb) and display them here.
+            I cant use LocalDb while im running MAUI, so I have to find a different way.
+            -->
 
+        </Grid>
+
+        <!-- Top bar -->
         <Button
-            Grid.Column="0"/>
+            Text="Recepter"
+            BackgroundColor="{StaticResource BoxColor}"
+            TextColor="{StaticResource BlackColor}"
+            FontAttributes="Bold"
+            MaximumWidthRequest="150"
+            CornerRadius="20"
+            FontSize="18"/>
 
         <Label
             Grid.Column="1"
-            x:Name="UserId"
-            Text="Test"/>
+            x:Name="UserName"
+            Text="Test"
+            VerticalTextAlignment="Center"
+            HorizontalTextAlignment="Center"
+            TextColor="{StaticResource WhiteColor}"
+            FontAttributes="Bold"
+            FontSize="18"/>
 
-        <CollectionView>
-            
-        </CollectionView>
-
+        <Label
+            Grid.ColumnSpan="2"
+            Grid.Row="1"
+            Text="Dagens Opgaver"
+            TextColor="{StaticResource WhiteColor}"
+            VerticalTextAlignment="Center"
+            HorizontalTextAlignment="Center"
+            FontAttributes="Bold"
+            FontSize="40"
+            Margin="0,10,0,30"/>
+        
     </Grid>
     
 </ContentPage>
